fix: links to dark mode pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,29 @@ html {
   position: relative;
 }
 
+.switchBtn {
+  position: absolute;
+  top: 1%;
+  left: 0.5%;
+  text-decoration: none;
+  color: var(--lightMode-header);
+  padding: 0.7rem;
+  border-radius: 50%;
+  border: 1px solid rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    background-color: var(--lightMode-primary);
+    border: var(--lightMode-text);
+  }
+}
+
+.container {
+  position: relative;
+}
+
 .entranceBgBlack {
   position: absolute;
   background-color: var(--lightMode-header);
