--- a/pages/AboutMe/assets/css/style.css
+++ b/pages/AboutMe/assets/css/style.css
@@ -32,6 +32,29 @@ span.bold {
   color: var(--lightMode-primary-hover);
 }
 
+.switchBtn {
+  position: absolute;
+  top: 1%;
+  left: 0.5%;
+  text-decoration: none;
+  color: var(--lightMode-header);
+  padding: 0.7rem;
+  border-radius: 50%;
+  border: 1px solid rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    background-color: var(--lightMode-primary);
+    border: var(--lightMode-text);
+  }
+}
+
+.container {
+  position: relative;
+}
+
 section.hero {
   height: 100svh;
   padding: 0.5rem;
